Fin de la sección

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 PORT=8080
+
+MONGODB=mongodb://jarcila1998:armeniaquindio@ac-ju7swqz-shard-00-00.np9iuuz.mongodb.net:27017,ac-ju7swqz-shard-00-01.np9iuuz.mongodb.net:27017,ac-ju7swqz-shard-00-02.np9iuuz.mongodb.net:27017/?replicaSet=atlas-y39snp-shard-0&ssl=true&authSource=admin
+
+USERNAME=jarcila1998 
+PASSWORD=armeniaquindio
