Fin de la sección de JWT -version 3.0.0

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ MONGODB=mongodb://jarcila1998:armeniaquindio@ac-ju7swqz-shard-00-00.np9iuuz.mong
 
 USERNAME=jarcila1998 
 PASSWORD=armeniaquindio
+
+SECRETORPRIVATEKEY=EST0ESL4CL4V3S3CRET4@1234*
